Fix cookie warning (#1706)
* Update base.jet.html

* Update listing.jet.html

* Update main.css

* bottom padding needs to be higher than top padding otherwise it looks off

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,8 +90,7 @@ img[class$="-w"] {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 60px;
-    padding: 7px 10px;
+    padding: 7px 10px 9px;
     text-align: center;
     font-weight: bold;
     background: hsla(200, 100%, 88%, 0.9);
